--- a/index.html
+++ b/index.html
@@ -21,12 +21,29 @@
             color: hsl(228, 45%, 44%);
         }
     </style>
+    <link rel="stylesheet" href="./styles.css" class="stylesheet">
 </head>
 
 <body>
-
-    Order Summary You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! Annual Plan $59.99/year Change Proceed to Payment Cancel Order
-
+    <div class="card-container">
+        <div class="card">
+            <img class="card-back-img" src="./images/illustration-hero.svg" alt="">
+            <div class="card-inner">
+                <h1>Order Summary</h1>
+                <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like! </p>
+                <div>
+                    <img class="card-music-img" src="./images/icon-music.svg" alt="">
+                    <div>
+                        <p>Annual Plan</p>
+                        <p>$59.99/year</p>
+                    </div>
+                    <p>Change</p>
+                </div>
+                <button>Proceed to Payment</button>
+                <button>Cancel Order</button>
+            </div>
+        </div>
+    </div>
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Daniel Brambila</a>.
     </div>
